--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,7 +1,9 @@
 @inproceedings{Gay:2001:FFP,
  author = {Gay, Simon J.},
- title = {A Framework for the Formalisation of Pi Calculus Type Systems in Isabelle/HOL},
- booktitle = {Proceedings of the 14th International Conference on Theorem Proving in Higher Order Logics},
+ title = {A Framework for the Formalisation of Pi Calculus Type Systems in
+          Isabelle/HOL},
+ booktitle = {Proceedings of the 14th International Conference on Theorem
+              Proving in Higher Order Logics},
  series = {TPHOLs '01},
  year = {2001},
  isbn = {3-540-42525-X},
@@ -13,7 +15,7 @@
  address = {London, UK, UK},
 }
 @article{Gay:2010:LTT,
- author = {Gay, Simon j. and Vasconcelos, Vasco t.},
+ author = {Gay, Simon J. and Vasconcelos, Vasco T.},
  title = {Linear Type Theory for Asynchronous Session Types},
  journal = {J. Funct. Program.},
  issue_date = {January 2010},
@@ -29,4 +31,14 @@
  acmid = {1735541},
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
+}
+@techReport{Gay:2008:STI,
+ author = {Gay, S.J. and Vasconcelos, V.T. and Ravara, A.},
+ institution = {University of Glasgow, Department of Computing Science},
+ title = {Session Types for Inter-Process Communication}, 
+ keywords = {Session types, static typechecking, semantics,
+             distributed programming, specification of communication
+             protocols},
+ publisher = {Dept of Computing Science, University of Glasgow},
+ year = {2003},
 }
