--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -39,6 +39,37 @@
 
 briefly explain the context of the project problem
 
+computing distributed communication rise of internet networked communication
+the protocols have an effect on the communication and if the protocol is wrong
+distributed communicatin now a propenent is most peoples' daily lives
+whether it be posting pictures on social media websites sharing videos
+or even so much as sending emails all require a well-defined protocol to
+specify the type and order of messages to be sent and received between the two
+or more communicating partners
+mainstream programming languages used to build such systems often fail to meet
+the strong guarantees that the correct type of messages will be sent or that
+the ordering between messages is preserved
+the rise of e-commerce and increasing reliance on software systems in the
+areas of aviation/transport mean that much confidence in these systems is placed thus it is of great importance that there exist strong guarantees of correctness
+
+
+
+it is thus clear that the need for
+construct an argument for the use of a proof assistant and interactive theorem
+proving technologies to formalise a framework for developing type systems
+involving session types that are based on lambda calculi so that we can use
+such a development to reason about a variety of type systems while minimising
+proof effort tie this into an introduction into the subfield of session types
+and what they are good for essentially motivating our project in this space
+additionally we can introduce the reader to the discipline of interactive
+theorem proving and formal methods more generally as a way to formalise
+programming languages highlighting the benefits of reusability increased
+correctness and something what else could we say i think it would appropriate
+to mention that the session types studied so far include both pi and lambda
+calculi and it may be beneficil if the reader was informed also the pi
+calculus paradigms do not fit well into the existing mainstream programming
+language paradigms this seems like it should be in the statement of the problem section down below also i should read more of jtod's slides because this writing just keep writing malarky might just be what i need to pound out the pages because it eliminates thoughts as they come into the head what else adopt and focus we have in the problem statement but perhaps those paragraphs should be re-jigged for up here multithreaded functional programming with linear typing for session types a number of these systems use different type systems but they are based on all the lambda calculus fundamentally so to have a generic framework to encode these variants would save on proof engineering effort as is championed by the POPLMARK challenge aimed at reducing the effort for researchers to code programming language metatheory it provides a library needed to perform various things define various parts of programming languages viewed to be difficult to formalise including handling binders and freshness they also mention handling of linear typing but renege on actually formulating this as part of their challenge they insist it is a future work here is the future
+
 \subsection{A subsection}
 Please note your proposal need not follow the included section headings - this
 is only a suggested structure. Also add subsections etc as required
