Added beginnings of typing rules for GV; need opening and substitution.
Specifically, need opening for the abstraction case (and the other
binding rules). These definitions need to respect linearity.

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -124,6 +124,9 @@ development.
 state how you propose to solve the software development problem. Show that
 your proposed approach is feasible, but identify any risks.
 
+HOAS Coq formalisation using Metatheory library from UPenn.
+Explain why this approach was taken versus intrinsic encoding of the terms
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Work Plan}
 
