Added introductory paragraphs and some references.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -14,7 +14,7 @@
  publisher = {Springer-Verlag},
  address = {London, UK, UK},
 }
-@article{Gay:2010:LTT,
+@article{Gay:2010:LAST,
  author = {Gay, Simon J. and Vasconcelos, Vasco T.},
  title = {Linear Type Theory for Asynchronous Session Types},
  journal = {J. Funct. Program.},
@@ -42,3 +42,66 @@
  publisher = {Dept of Computing Science, University of Glasgow},
  year = {2003},
 }
+@inproceedings{Wadler:2012,
+ author = {Wadler, Philip},
+ title = {Propositions As Sessions},
+ booktitle = {Proceedings of the 17th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '12},
+ year = {2012},
+ isbn = {978-1-4503-1054-3},
+ location = {Copenhagen, Denmark},
+ pages = {273--286},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2364527.2364568},
+ doi = {10.1145/2364527.2364568},
+ acmid = {2364568},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {lambda calculus, linear logic, pi calculus},
+}
+@inproceedings{Mazurak:2010:LCC,
+ author = {Mazurak, Karl and Zdancewic, Steve},
+ title = {Lolliproc: To Concurrency from Classical Linear Logic via
+Curry-howard and Control},
+ booktitle = {Proceedings of the 15th ACM SIGPLAN International Conference on
+Functional Programming},
+ series = {ICFP '10},
+ year = {2010},
+ isbn = {978-1-60558-794-3},
+ location = {Baltimore, Maryland, USA},
+ pages = {39--50},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1863543.1863551},
+ doi = {10.1145/1863543.1863551},
+ acmid = {1863551},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {concurrency, linear logic, type systems},
+}
+@inproceedings{Mazurak:2010:LLT,
+ author = {Mazurak, Karl and Zhao, Jianzhou and Zdancewic, Steve},
+ title = {Lightweight Linear Types in System F${}^\circ$},
+ booktitle = {Proceedings of the 5th ACM SIGPLAN Workshop on Types in Language Design and Implementation},
+ series = {TLDI '10},
+ year = {2010},
+ isbn = {978-1-60558-891-9},
+ location = {Madrid, Spain},
+ pages = {77--88},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1708016.1708027},
+ doi = {10.1145/1708016.1708027},
+ acmid = {1708027},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {linear logic, polymorphism, type systems},
+}
+@phdthesis{Mazurak:2013:LPP,
+ author = {Mazurak, Karl},
+ advisor = {Zdancewic, Steve},
+ title = {Linear types, protocols, and processes in classical F${}^\circ$},
+ year = {2013},
+ isbn = {978-1-303-39648-9},
+ note = {AAI3594830},
+ publisher = {University of Pennsylvania},
+ address = {Philadelphia, PA, USA},
+} 
