Adding some more thoughts to the proposal.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -105,3 +105,22 @@ Functional Programming},
  publisher = {University of Pennsylvania},
  address = {Philadelphia, PA, USA},
 } 
+@article{Benton:2012:STT,
+ author = {Benton, Nick and Hur, Chung-Kil and Kennedy, Andrew J. and Mcbride, Conor},
+ title = {Strongly Typed Term Representations in Coq},
+ journal = {J. Autom. Reason.},
+ issue_date = {August    2012},
+ volume = {49},
+ number = {2},
+ month = aug,
+ year = {2012},
+ issn = {0168-7433},
+ pages = {141--159},
+ numpages = {19},
+ url = {http://dx.doi.org/10.1007/s10817-011-9219-0},
+ doi = {10.1007/s10817-011-9219-0},
+ acmid = {2339503},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {The Coq proof assistant, Typed object languages, de Bruijn indices},
+}
