Provisionally finished the introduction draft.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -106,7 +106,7 @@ Functional Programming},
  address = {Philadelphia, PA, USA},
 } 
 @article{Benton:2012:STT,
- author = {Benton, Nick and Hur, Chung-Kil and Kennedy, Andrew J. and Mcbride, Conor},
+ author = {Benton, Nick and Hur, Chung-Kil and Kennedy, Andrew J. and McBride, Conor},
  title = {Strongly Typed Term Representations in Coq},
  journal = {J. Autom. Reason.},
  issue_date = {August    2012},
@@ -123,4 +123,64 @@ Functional Programming},
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
  keywords = {The Coq proof assistant, Typed object languages, de Bruijn indices},
+}
+@inproceedings{Aydemir:2005:MMM,
+ author = {Aydemir, Brian E. and Bohannon, Aaron and Fairbairn, Matthew and Foster, J. Nathan and Pierce, Benjamin C. and Sewell, Peter and Vytiniotis, Dimitrios and Washburn, Geoffrey and Weirich, Stephanie and Zdancewic, Steve},
+ title = {Mechanized Metatheory for the Masses: The PoplMark Challenge},
+ booktitle = {Proceedings of the 18th International Conference on Theorem Proving in Higher Order Logics},
+ series = {TPHOLs'05},
+ year = {2005},
+ isbn = {3-540-28372-2, 978-3-540-28372-0},
+ location = {Oxford, UK},
+ pages = {50--65},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1007/11541868_4},
+ doi = {10.1007/11541868_4},
+ acmid = {2145062},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+}
+@inproceedings{Aydemir:2008:EFM,
+ author = {Aydemir, Brian and Chargu{\'e}raud, Arthur and Pierce, Benjamin C. and Pollack, Randy and Weirich, Stephanie},
+ title = {Engineering Formal Metatheory},
+ booktitle = {Proceedings of the 35th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '08},
+ year = {2008},
+ isbn = {978-1-59593-689-9},
+ location = {San Francisco, California, USA},
+ pages = {3--15},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/1328438.1328443},
+ doi = {10.1145/1328438.1328443},
+ acmid = {1328443},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {binding, coq, locally nameless},
+}
+@Manual{Coq:manual,
+  title =        {The Coq Proof Assistant Reference Manual},
+  author =       {\mbox{Coq development team, The}},
+  organization = {INRIA},
+  note =         {Version 8.4pl4},
+  year =         {2014},
+  url =          {https://coq.inria.fr/distrib/8.4pl4/refman/}
+}
+@article{Park:2014:MMW,
+ author = {Park, Jonghyun and Seo, Jeongbong and Park, Sungwoo and Lee, Gyesik},
+ title = {Mechanizing Metatheory Without Typing Contexts},
+ journal = {J. Autom. Reason.},
+ issue_date = {February  2014},
+ volume = {52},
+ number = {2},
+ month = feb,
+ year = {2014},
+ issn = {0168-7433},
+ pages = {215--239},
+ numpages = {25},
+ url = {http://dx.doi.org/10.1007/s10817-013-9287-4},
+ doi = {10.1007/s10817-013-9287-4},
+ acmid = {2582734},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {Popl Mark, System F \&\#60; :, Typing context},
 }
